<resources>
    <string name="app_name">Card X</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="wong_email_or_password">Wrong email or password</string>
    <string name="please_type_your_email">Please type your email</string>
    <string name="please_type_your_password">Please type your password</string>
    <string name="error_getting_data_from_database">Error getting data from database</string>
    <string name="dark_theme">DARK THEME</string>
    <string name="light_theme">LIGHT THEME</string>
    <string name="sucess_reset_password_message">You should receive the email shortly with instructions</string>
    <string name="failure_reset_password_message">Error, there is no account with that email</string>
    <string name="forgotpassword_activity_title">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="short_password_error">Password must be at least 6 characters long</string>
    <string name="password_dont_match_error">Passwords don\'t match</string>
    <string name="email_already_used_error">There is an user with this email already</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="all_cards">All Cards</string>
    <string name="theme_selection">Theme Selection</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="business_name">Business Name</string>
    <string name="sepeciality">Sepeciality</string>
    <string name="telephone_1">Telephone 1</string>
    <string name="telephone_2">Telephone 2</string>
    <string name="telephone_3">Telephone 3</string>
    <string name="mail_address">Mail Address</string>
    <string name="address">Address</string>
    <string name="category">Category</string>
    <string name="create_card">CREATE CARD</string>
    <string name="no_permission_error">The app lacks the permissions to do this.</string>
    <string name="name_business_inputs_not_filled_error">Fill either the name or the business name field</string>
    <string name="permission_denied">Permission denied</string>
    <string name="no_internet_error">No internet connection available, unable to make new account</string>
</resources>
