<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".CreateCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/gradient_1"
        tools:context=".CreateCard">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo_input"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginVertical="10dp"
                    android:onClick="SelectLogo"
                    app:srcCompat="@drawable/logo_placeholder" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/background_1"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="5dp"
                            android:onClick="SelectBackground"
                            android:src="@drawable/gradient_1" />

                        <ImageView
                            android:id="@+id/background_2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:onClick="SelectBackground"
                            android:src="@drawable/gradient_2" />

                        <ImageView
                            android:id="@+id/background_3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:onClick="SelectBackground"
                            android:src="@drawable/gradient_3" />

                        <ImageView
                            android:id="@+id/background_4"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:onClick="SelectBackground"
                            android:src="@drawable/gradient_4" />

                        <ImageView
                            android:id="@+id/background_5"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:onClick="SelectBackground"
                            android:src="@drawable/gradient_5" />

                        <ImageView
                            android:id="@+id/background_6"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:onClick="SelectBackground"
                            android:src="@drawable/gradient_6" />

                        <ImageView
                            android:id="@+id/background_7"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:onClick="SelectBackground"
                            android:src="@drawable/gradient_7" />

                        <ImageView
                            android:id="@+id/background_8"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:onClick="SelectBackground"
                            android:src="@drawable/gradient_8" />

                        <ImageView
                            android:id="@+id/background_9"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:onClick="SelectBackground"
                            android:src="@drawable/gradient_9" />

                        <ImageView
                            android:id="@+id/background_10"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:onClick="SelectBackground"
                            android:src="@drawable/gradient_10" />
                    </LinearLayout>
                </HorizontalScrollView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_input_layout"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/business_name_input_layout"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/business_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/business_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/speciality_input_layout"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/speciality_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sepeciality" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/telephone_1_input_layout"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/telephone_1_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telephone_1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/telephone_2_input_layout"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/telephone_2_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telephone_2" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/telephone_3_input_layout"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/telephone_3_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telephone_3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_input_layout"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mail_address_input_layout"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mail_address_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mail_address" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_input_layout"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/category_input_layout"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/category_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/category" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/createcard_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/button_border_light"
                    android:onClick="FinishCardCreation"
                    android:text="@string/create_card" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>